@@ -15,3 +15,4 @@ Carl Mascott - FreeBSD support
 Rich Salz - Allow -i accept stdio as input as "-"
 Stephane Fritsch - BeOS support
 Andy Newman <atrn> - FreeBSD support patch
+Sascha Blank - FreeBSD support
