@@ -491,7 +491,7 @@ case "$host_os" in
 	linux*)
 		AC_DEFINE(Linux)
 	;;
-	netbsd*)
+	netbsd*|freebsd*)
 		AC_DEFINE(BSD)
 	;;
 esac
